@@ -1,5 +1,6 @@
 [tox]
 envlist =
+    pylint
     py311
     py312
 
@@ -12,3 +13,10 @@ commands =
     coverage report
     coverage html
 
+[testenv:pylint]
+base_python = py3.12
+skip_install = True
+deps =
+    pylint
+commands =
+    - pylint --errors-only smartcard
